--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <title>Wok Paper Scissors</title>
         <link rel="stylesheet" href="styles.css">
         <script src="code.js" defer></script>
 </head>
 <body>
     <div class="header">
-    <h1>Welcome to Rock Papa Scissors</h1>
+    <h1>Welcome to Wok Paper Scissors</h1>
     </div>
     <div class="Description">Pick your weapon!
         <button id="fightButton">FIGHT!</button>
